# aliyun-odps-python-sdk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  License  MANIFEST.in  README.md  README.rst  appveyor.yml  build_wheels.sh  pyproject.toml  requirements-full.txt  requirements-wheel.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: allow-cython-in-windows.sh  ci.yml  install-conda.sh  pypi-cd.yml  reload-env.sh  upload-packages.sh
benchmarks/: getprofile.sh  perf_storage_api_arrow.py  perf_tabletunnel.py  perf_types.py
conf/: test.conf.template
cupid/: __init__.py  _version.py  config.py  errors.py  rpc.py  session.py  utils.py
cupid/io/: __init__.py  kvstore.py
cupid/io/table/: __init__.py  core.py  pd.py  record.py
cupid/proto/: cupid_process_service.proto  cupid_process_service_pb2.py  cupid_subprocess_service.proto  cupid_subprocess_service_pb2.py  cupid_task_service.proto  cupid_task_service_pb2.py  cupidtaskparam.proto  cupidtaskparam_pb2.py  kv_store_service.proto  kv_store_service_pb2.py
cupid/runtime/: __init__.py  ctypes_libs.py  runtime.py  runtime_test.py
cupid/tests/: __init__.py
docs/: Makefile  make.bat  requirements-doc.txt
docs/source/: api-def-int.rst  api-def.rst  api-df.rst  api-entry.rst  api-mars.rst  api-ml.rst  api-models.rst  api-pai-int.rst  api-storage-v2.rst  api-tunnel.rst  api-types.rst  api.rst  base-dbapi.rst  base-functions-zh.rst  base-functions.rst  base-instances-zh.rst  base-instances.rst  base-models-zh.rst  base-models.rst  base-projects-zh.rst  base-projects.rst  base-resources-zh.rst  base-resources.rst  base-schemas.rst  base-sql-zh.rst  base-sql.rst  base-sqlalchemy.rst  base-storage-api-v2.rst  base-tables-zh.rst  base-tables.rst  base-types.rst  base-zh.rst  base.rst  cl-zh.rst  conf.py  db-dbapi.rst  db-sqlalchemy.rst  db.rst  df-agg-zh.rst  df-agg.rst  (+67 more)
docs/source/_static/: theme_override-nrtd.css  theme_override-nrtd.js  theme_override.css  theme_override.js
examples/storage_api/: __init__.py  commit_write_session.py  create_read_session.py  create_write_session.py  get_read_session.py  get_write_session.py  read_rows.py  util.py  write_rows.py
hooks/: pre-commit
misc/: algorithms.xsd  explode.input  instance.xsd  license_head.pl  plus.input  python  stdint.h  test_udf.py
notebooks/: ml_intro.ipynb  nb_init.py  pai_intro.ipynb  quick_example.ipynb  roc.ipynb
odps/: __init__.py  _models.py  _version.py  accounts.py  compat.py  config.py  conftest.py  console.py  core.py  counters.py  crc.py  dag.py  dbapi.py  distcache.py  errors.py  inter.py  models.py  readers.py  resource.py  rest.py  serializers.py  sqlalchemy_odps.py  superset_odps.py  tasks.py  tempobj.py  types.py  utils.py
odps/apis/: __init__.py
odps/apis/storage_api/: __init__.py  conftest.py  storage_api.py
odps/apis/storage_api_v2/: __init__.py  client.py  models.py  stream_io.py
odps/compat/: __init__.py  six.py  utils.py
odps/datahub/: __init__.py  conf.py  datahubclient.py  datahubreader.py  datahubwriter.py  errors.py  recordpack.py  schema.py  xstreampack_pb2.py
odps/datahub/proto/: xstreampack.proto
odps/df/: __init__.py  core.py  delay.py  engines.py  errors.py  examples.py  types.py  ui.py  utils.py
odps/df/backends/: analyzer.py  context.py  core.py  engine.py  errors.py  formatter.py  frame.py  optimize.py  rewriter.py  selecter.py  utils.py
odps/df/expr/: arithmetic.py  collections.py  composites.py  core.py  datetimes.py  dynamic.py  element.py  errors.py  expressions.py  formatter.py  math.py  (+7 more)
odps/examples/: __init__.py  tables.py
odps/expressions/: __init__.py  core.py  functions.py
odps/ipython/: __init__.py  completer.py  magics.py
odps/lab_extension/: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  package.json  setup.py
odps/lib/: __init__.py  cgi_compat.py  cloudpickle.py  enum.py  ext_types.py  importer.py  lib_utils.py  monotonic.py  six.py  version.py  xnamedtuple.py
odps/mars_extension/: __init__.py  core.py  filesystem.py  oss.py  run_script.py  utils.py
odps/ml/: __init__.py  cross_validation.py  engine.py  engines.py  enums.py  models.py  runners.py  utils.py
odps/models/: __init__.py  cache.py  cluster_info.py  core.py  function.py  functions.py  instance.py  instances.py  job.py  partition.py  partitions.py  project.py  projects.py  quota.py  quotas.py  readers.py  record.py  resource.py  resourcefile.py  resources.py  schema.py  schemas.py  session.py  storage_tier.py  table.py  tableio.py  tables.py  tasks.py  tenant.py  volume.py  volume_ext.py  volume_fs.py  volume_parted.py  volume_partition.py  volumes.py  worker.py  xflow.py  xflows.py
odps/pai/: __init__.py  context.py  models.py  runner.py  sink.py
odps/runner/: __init__.py  context.py  core.py  engine.py  enums.py  runner.py  ui.py  user_tb.py  utils.py
odps/src/: crc32.c  crc32c.c  crc32c_c.pxd  crc32c_c.pyx  stringstream.pxd  timegm.c  types_c.pxd  types_c.pyx  utils.h  utils_c.pxd  utils_c.pyx
odps/test/: pyou  test_datahub.py  test_executioncontext.py  test_main.py  test_resource.py  test_simple_run.py  test_tunnel.py  test_usercounter.py  udf_examples.py  ut.py
odps/tests/: __init__.py  core.py  dictconfig.py  test_accounts.py  test_config.py  test_crc.py  test_dag.py  test_dbapi.py  test_errors.py  test_inter.py  test_readers.py  test_serializers.py  test_sqlalchemy_odps.py  test_superset_odps.py  test_tempobjs.py  test_types.py  test_unixsocket.py  test_utils.py
odps/tunnel/: __init__.py  base.py  checksum.py  checksum_c.pxd  checksum_c.pyx  conf.py  downloadsession.py  errors.py  hasher.py  hasher_c.pxd  hasher_c.pyx  instancetunnel.py  io.py  reader.py  router.py  tabletunnel.py  uploadsession.py  volumetunnel.py  wireconstants.py  writer.py
odps/udf/: __init__.py  blob.py  runtime.py
odps/ui/: __init__.py  common.py  progress.py
odps_scripts/: pyodps_pack.py  pyou.py
odps_scripts/pyodpswrapper/: __init__.py  __main__.py  compat.py  conftest.py  envs.py  headers.py  mars_support.py  resource.py  runner.py  utils.py
scripts/: pyou
(+592 files in other folders)
