[project]
name = "pyodps"
dynamic = ["version"]
description = "ODPS Python SDK and data analysis framework"
readme = "README.rst"
license = {text = "Apache License 2.0"}
requires-python = ">=3.7"
authors = [ {name = "Wu Wei", email = "weiwu@cacheme.net"} ]
maintainers = [ {name = "Wenjun Si", email = "wenjun.swj@alibaba-inc.com"} ]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 1 - Unstable",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.4.0",
    "pyarrow>=2.0.0",
]

[project.optional-dependencies]
full = [
    "jupyter>=1.0.0",
    "ipython>=4.0.0",
    "numpy>=1.6.0",
    "pandas>=0.17.0",
    "matplotlib>=1.4",
    "graphviz>=0.4",
    "greenlet>=0.4.10",
    "cython>=0.20; sys_platform != \"win32\"",
]

[project.urls]
Repository = "http://github.com/aliyun/aliyun-odps-python-sdk"

[project.entry-points."sqlalchemy.dialects"]
odps = "odps.sqlalchemy_odps:ODPSDialect"
maxcompute = "odps.sqlalchemy_odps:ODPSDialect"

[project.entry-points."superset.db_engine_specs"]
odps = "odps.superset_odps:ODPSEngineSpec"
maxcompute = "odps.superset_odps:ODPSEngineSpec"

[project.scripts]
pyou = "odps_scripts.pyou:main"
pyodps-pack = "odps_scripts.pyodps_pack:main"
pyodpswrapper = "odps_scripts.pyodpswrapper.__main__:main"

[build-system]
requires = [
    "setuptools>=64,<70",
    "wheel",
    # oldest-supported-numpy is deprecated and only applied for older Python versions
    "oldest-supported-numpy==2023.10.25; platform_machine=='aarch64' and python_version<'3.9'",
    # Force numpy higher than 2.0, so that built wheels are compatible
    # with both numpy 1 and 2
    "numpy>=2.0.0; python_version>='3.9'",
    "cython>=3.0,<3.1; platform_system!='Windows' and python_version <= '3.12'",
    "cython>=3.1,<3.3; platform_system!='Windows' and python_version > '3.12'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["*.tests.*", "*.tests"]

[tool.coverage.run]
branch = true
cover_pylib = false
concurrency = ["multiprocessing", "thread", "greenlet"]
omit=[
    "*/**/conftest.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py34']  # for trailing commas after **kwargs
extend-exclude = '''
^/benchmarks/.*
| ^/bin/.*
| ^/cupid/.*
| ^/docs/.*
| ^/misc/.*
| ^/odps/mars_extension/.*
| ^/odps/df/.*
| ^/odps/lib/.*
| ^/odps/ml/.*
| ^/odps/static/.*
'''

[tool.isort]
profile = "black"
py_version = 37
skip_glob = [
    "cupid/*",
    "examples/*",
    "misc/*",
    "odps/df/*",
    "odps/lib/*",
    "odps/mars_extension/*",
    "odps/ml/*",
]
